--- a/Galaxy.PL.CoreMVC/Views/Admin/AdminAddCategory.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Admin/AdminAddCategory.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model AdminCategoryViewModel
+
+@await Html.PartialAsync("AdminMenuPartial")
+
+<hr />
+@TempData["Message"]
+<form asp-controller="Admin" asp-action="AddCategory" method="post">
+    <input name="CategoryID" type="hidden" value=@Model.CategoryID>
+    Name: <input asp-for=@Model.Name><br />
+    IsActive: <input asp-for=@Model.IsActive><br />
+    <button class="btn btn-info btn-sm">Edit</button>
+</form>
