--- a/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<a asp-action="Info" asp-controller="Profile" style="color:red">My Info</a>
+﻿<a asp-action="GetInfo" asp-controller="Profile" style="color:red">My Info</a>
  -
 <a asp-action="GetOrders" asp-controller="Order" style="color:red">My Orders</a>
 -
