--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Order
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Packager
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Deliverer
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Admin
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
