--- a/Galaxy.PL.CoreMVC/Views/Admin/AdminCategoryList.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Admin/AdminCategoryList.cshtml
@@ -1,5 +1,42 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<AdminCategoryViewModel>
+
+@await Html.PartialAsync("AdminMenuPartial")
+
+<hr />
+@TempData["Message"]
+<form asp-controller="Admin" asp-action="UpdateCategories" method="post">
+    <table class="table table-sm table-hover table-bordered table-dark">
+        <thead>
+            <tr>
+                <th>
+                    Category ID
+                </th>
+                <th>
+                    Category Name
+                </th>
+                <th>
+                    Is Active?
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (int i = 0; i < Model.Count; i++)
+            {                
+                <tr>
+                    <td>
+                        @Model[i].CategoryID
+                        <input asp-for=@Model[i].CategoryID hidden="true">
+                    </td>
+                    <td>
+                        Name: <input asp-for=@Model[i].Name>
+                    </td>
+                    <td>
+                        IsActive: <input asp-for=@Model[i].IsActive>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <hr />
+    <button class="btn btn-info btn-sm">Update</button>
+</form>
