--- a/Galaxy.PL.CoreMVC/Views/Shared/_Layout.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Packager" asp-action="Index">Packager</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Privacy</a>
