--- a/Galaxy.PL.CoreMVC/Views/Admin/AdminEmployeeList.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Admin/AdminEmployeeList.cshtml
@@ -46,7 +46,7 @@
             <tr>
                 <td>
                     @Model[i].EmployeeID
-                    <input asp-for=@Model[i].EmployeeID hidden="true">
+                    <input asp-for=@Model[i].EmployeeID hidden>
                 </td>
                 <td>
                     <input asp-for=@Model[i].Mail>
