--- a/Galaxy.PL.CoreMVC/Views/Account/Register.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Account/Register.cshtml
@@ -1,8 +1,10 @@
-﻿<form asp-controller="Account" asp-action="Register" method="post">
+﻿@TempData["Message"]
+<br />
+<form asp-controller="Account" asp-action="Register" method="post">
     Name: <input type="text" id="Name" class="form-control" /><br />
     Surname: <input type="text" id="Surname" class="form-control" /><br />
     EMail: <input type="email" id="EMail" class="form-control" /><br />
     Password: <input type="password" id="Password" class="form-control" /><br />
     Password, Again: <input type="password" id="Password" class="form-control" /><br />
-    <button class="btn btn-info btn-sm">Login</button>
+    <button class="btn btn-info btn-sm">Register</button>
 </form>
