--- a/Galaxy.PL.CoreMVC/Views/Admin/AdminProductList.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Admin/AdminProductList.cshtml
@@ -37,33 +37,33 @@
         <tbody>
             @for (int i = 0; i < Model.Count; i++)
             {
-            <tr>
-                <td>
-                    @Model[i].ProductID
-                    <input asp-for=@Model[i].ProductID hidden="true">
-                </td>
-                <td>
-                    <input asp-for=@Model[i].CategoryID>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].Name>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].Price>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].DiscountedPrice>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].Description>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].ImagePath>
-                </td>
-                <td>
-                    <input asp-for=@Model[i].IsActive>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Model[i].ProductID
+                        <input asp-for=@Model[i].ProductID hidden="true">
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].CategoryID>
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].Name>
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].Price>
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].DiscountedPrice>
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].Description>
+                    </td>
+                    <td>
+                        <input asp-for=@Model[i].ImagePath>
+                    </td>
+                    <td>
+                        <a asp-controller="Admin" asp-action="DeleteProduct" asp-route-productID="@Model[i].ProductID">Delete</a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
