--- a/Galaxy.PL.CoreMVC/Views/Order/OrderDetails.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Order/OrderDetails.cshtml
@@ -6,6 +6,6 @@
     <li style="color:white">
         Order ID: @Model.OrderID<br />
         Order Status: @Model.OrderStatus<br />
-        Deliverer: @Model.DelivererID<br />
+        Deliverer: @Model.DelivererName<br />
     </li>
 </ul>
