--- a/Galaxy.PL.CoreMVC/Views/Packager/PackagerOrderDetails.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Packager/PackagerOrderDetails.cshtml
@@ -21,8 +21,7 @@
             <input name="OrderID" type="hidden" value=@Model.OrderID>
             <input name="MemberID" type="hidden" value=@Model.MemberID>
             <input name="PackagerID" type="hidden" value=@Model.PackagerID>
-            <input name="CityID" type="hidden" value=@Model.CityID>
-            <input name="CountyID" type="hidden" value=@Model.CountyID>
+            <input name="AddressID" type="hidden" value=@Model.AddressID>
             Deliverer: <select id="deliverer-selector" asp-for="DelivererID" asp-items="Model.Deliverers"></select> <br />
             Status:<select id="status-selector" asp-for="OrderStatus" asp-items="Model.OrderStatuses"></select><br />
             <button class="btn btn-info btn-sm">Assign</button>
