--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Packager
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Deliverer
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Admin
+@using Galaxy.PL.CoreMVC.Helpers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
