--- a/Galaxy.PL.CoreMVC/Views/Admin/AdminAddEmployee.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Admin/AdminAddEmployee.cshtml
@@ -15,5 +15,5 @@
     BirthDate: <input asp-for=@Model.BirthDate><br />
     Phone: <input asp-for=@Model.Phone><br />
     IsPasswordValid: <input asp-for=@Model.IsPasswordValid><br />
-    <button class="btn btn-info btn-sm">Edit</button>
+    <button class="btn btn-info btn-sm">Add</button>
 </form>
