--- a/Galaxy.PL.CoreMVC/Views/Account/Index.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Account/Index.cshtml
@@ -7,3 +7,7 @@
 <hr />
 
 <a asp-action="Register" asp-controller="Account">Register New Account</a>
+
+<hr />
+
+<a asp-action="VerifyMail" asp-controller="Account">Verify Your Mail</a>
