--- a/Galaxy.PL.CoreMVC/Views/Account/Register.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Account/Register.cshtml
@@ -1,10 +1,12 @@
-﻿@TempData["Message"]
+﻿@model AccountRegisterViewModel
+
+@TempData["Message"]
 <br />
 <form asp-controller="Account" asp-action="Register" method="post">
-    Name: <input type="text" id="Name" class="form-control" /><br />
-    Surname: <input type="text" id="Surname" class="form-control" /><br />
-    EMail: <input type="email" id="EMail" class="form-control" /><br />
-    Password: <input type="password" id="Password" class="form-control" /><br />
-    Password, Again: <input type="password" id="Password" class="form-control" /><br />
+    EMail: <input asp-for=@Model.EMail> <br />
+    Password 1: <input asp-for=@Model.Password1><br />
+    Password 2: <input asp-for=@Model.Password2><br />
+    Name: <input asp-for=@Model.Name><br />
+    SurnameName: <input asp-for=@Model.Surname><br />
     <button class="btn btn-info btn-sm">Register</button>
 </form>
