--- a/Galaxy.PL.CoreMVC/Views/Shared/ErrorPage.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ErrorPage.cshtml
@@ -4,4 +4,4 @@
 
 <hr />
 
-<a class="btn btn-info btn-sm" asp-controller="Home" asp-action="Index">Home</a>
+<a class="btn btn-info btn-sm" asp-controller="Account" asp-action="Index">Home</a>
