--- a/Galaxy.PL.CoreMVC/Views/Address/AddressList.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Address/AddressList.cshtml
@@ -1,6 +1,8 @@
 ﻿@model List<ProfileAddressViewModel>
 
 @await Html.PartialAsync("ProfileMenuPartial")
+<br />
+@TempData["Message"]
 
 <hr />
 <table class="table table-sm table-hover table-bordered table-dark">
